--- a/package.json
+++ b/package.json
@@ -1,19 +1,25 @@
 {
-  "name": "manage_student_eaut",
-  "version": "1.0.0",
-  "description": "Student warning system project",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/XuanManh9999/Server.git"
-  },
-  "author": "Xuan Manh",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/XuanManh9999/Server/issues"
-  },
-  "homepage": "https://github.com/XuanManh9999/Server#readme"
+    "name": "server",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "start": "nodemon server.js"
+    },
+    "dependencies": {
+        "body-parser": "^1.20.2",
+        "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
+        "debug": "~2.6.9",
+        "dotenv": "^16.3.1",
+        "express": "~4.16.1",
+        "http-errors": "~1.6.3",
+        "jade": "~1.11.0",
+        "lodash": "^4.17.21",
+        "morgan": "~1.9.1",
+        "mysql2": "^3.6.3"
+    },
+    "devDependencies": {
+        "nodemon": "^3.0.1"
+    },
+    "type": "module"
 }
