--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "jade": "~1.11.0",
+        "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
         "morgan": "~1.9.1",
         "mysql2": "^3.6.3"
