--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "start": "nodemon server.js"
     },
     "dependencies": {
+        "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
