--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "body-parser": "^1.20.2",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
+        "crypto-js": "^4.2.0",
         "debug": "~2.6.9",
         "dotenv": "^16.3.1",
         "express": "~4.16.1",
