--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
+        "cookie": "^0.6.0",
         "cookie-parser": "~1.4.4",
         "cors": "^2.8.5",
         "crypto-js": "^4.2.0",
@@ -16,6 +17,7 @@
         "express": "~4.16.1",
         "http-errors": "~1.6.3",
         "jade": "~1.11.0",
+        "js-cookie": "^3.0.5",
         "jsonwebtoken": "^9.0.2",
         "lodash": "^4.17.21",
         "morgan": "~1.9.1",
