--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=2008
-CLIENT_URL="http://localhost:3000/"
+CLIENT_URL=http://localhost:3000
 SALT=10
 SECRETKEY="EAUT@2008"
 ACCESS_TOKEN_SECRET=access_token
 REFRESH_TOKEN_SECRET=refresh_token
+START_YEAR=2008
