Add API Send Warning by warning

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ SECRETKEY="EAUT@2008"
 ACCESS_TOKEN_SECRET=access_token
 REFRESH_TOKEN_SECRET=refresh_token
 START_YEAR=2008
+EMAIL_USERNAME=nguyenxuanmanh2992003@gmail.com
+EMAIL_PASSWORD=zccx vjxh boyp tyvq
