--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ REFRESH_TOKEN_SECRET=refresh_token
 START_YEAR=2008
 EMAIL_USERNAME=nguyenxuanmanh2992003@gmail.com
 EMAIL_PASSWORD=zccx vjxh boyp tyvq
+START_DAY_SEND_EMAIL=2008
