ADD API Warning

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ REFRESH_TOKEN_SECRET=refresh_token
 START_YEAR=2008
 EMAIL_USERNAME=nguyenxuanmanh2992003@gmail.com
 EMAIL_PASSWORD=zccx vjxh boyp tyvq
-START_DAY_SEND_EMAIL=2008
+START_DAY_SEND_EMAIL=90
