Update API Diem, diem Danh

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ START_YEAR=2008
 EMAIL_USERNAME=nguyenxuanmanh2992003@gmail.com
 EMAIL_PASSWORD=zccx vjxh boyp tyvq
 START_DAY_SEND_EMAIL=90
+DEFAULT_FASSWORD=123456@aA
+DOMAIN_DEFAULT_EMAIL=@eaut.edu.vn
