--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,12 @@
 PORT=
+CLIENT_URL=
 SALT=
 SECRETKEY=
 ACCESS_TOKEN_SECRET=
 REFRESH_TOKEN_SECRET=
 START_YEAR=
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+START_DAY_SEND_EMAIL=
+DEFAULT_FASSWORD=
+DOMAIN_DEFAULT_EMAIL=
